window.location.href edited

--- a/public/controls_question1.html
+++ b/public/controls_question1.html
@@ -86,10 +86,10 @@
 
     <form id="control-q1" style="text-align: center;">
       <!-- Updated answer values to match correct answer format -->
-      <input type="radio" name="cq1" value="A" required> A <br>
-      <input type="radio" name="cq1" value="B"> B <br>
-      <input type="radio" name="cq1" value="C"> C <br>
-      <input type="radio" name="cq1" value="D"> D <br>
+      <input type="radio" name="cq1" value="A-9" required> A-9 <br>
+      <input type="radio" name="cq1" value="B-3"> B-3 <br>
+      <input type="radio" name="cq1" value="C-8"> C-8 <br>
+      <input type="radio" name="cq1" value="D-2"> D-2 <br>
       <button type="submit" class="button">Next</button>
     </form>
   </main>
