--- a/public/rules_question3.html
+++ b/public/rules_question3.html
@@ -175,7 +175,7 @@
       const userAnswers = JSON.parse(safeLocalStorageGetItem('userAnswers')) || {};
 
       // Get the selected answer
-      const selectedAnswer = document.querySelector('input[name="q2"]:checked').value;  // Update question selector
+      const selectedAnswer = document.querySelector('input[name="rq3"]:checked').value;  // Update question selector
 
       // Save the answer under the key 'control_q2' for this specific question
       userAnswers['rules_q3'] = selectedAnswer;
