--- a/public/results.html
+++ b/public/results.html
@@ -93,17 +93,17 @@
   </footer>
 
   <script>
-    // Correct answers for the quiz
+    // Correct answers for the quiz (using updated keys)
     const correctAnswers = {
-        'control_q1': 'C',
-        'control_q2': 'C',
-        'control_q3': 'B',
-        'rules_q1': 'A',
-        'rules_q2': 'C',
-        'rules_q3': 'C',
-        'signs_q1': 'A',
-        'signs_q2': 'B',
-        'signs_q3': 'C'
+        'cq1': 'C',  // Controls question 1
+        'cq2': 'C',  // Controls question 2
+        'cq3': 'B',  // Controls question 3
+        'rq1': 'A',  // Rules question 1
+        'rq2': 'C',  // Rules question 2
+        'rq3': 'C',  // Rules question 3
+        'sq1': 'A',  // Signs question 1
+        'sq2': 'B',  // Signs question 2
+        'sq3': 'C'   // Signs question 3
     };
 
     // Function to display results
@@ -128,7 +128,11 @@
 
         // Save the latest result to localStorage
         const pastResults = JSON.parse(localStorage.getItem('testResults')) || [];
-        pastResults.push({ score: score, percentage: percentage });
+        pastResults.push({ 
+          score: score, 
+          percentage: percentage,
+          date: new Date().toLocaleDateString() // Adding date for tracking
+        });
         localStorage.setItem('testResults', JSON.stringify(pastResults));
     }
 
