--- a/public/controls_question1.html
+++ b/public/controls_question1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Control Question 1 - Drive Mzansi</title>
-  <link rel="stylesheet" href="css/styles.css"> <!-- Corrected path -->
+  <link rel="stylesheet" href="css/styles.css">
   <style>
     /* Page styling for consistency */
     body {
@@ -72,7 +72,7 @@
         <li><a href="index.html">Home</a></li>
       </ul>
     </nav>
-    <p>Time left: <span id="timer" aria-live="polite">10:00</span></p> <!-- Added aria-live for accessibility -->
+    <p>Time left: <span id="timer" aria-live="polite">10:00</span></p>
   </header>
 
   <main>
@@ -103,6 +103,7 @@
     function safeLocalStorageSetItem(key, value) {
       try {
         localStorage.setItem(key, value);
+        console.log(`Saved to localStorage: ${key} =`, value);  // Debugging log
       } catch (e) {
         console.warn("Could not save to localStorage", e);
       }
@@ -110,7 +111,9 @@
 
     function safeLocalStorageGetItem(key) {
       try {
-        return localStorage.getItem(key);
+        const value = localStorage.getItem(key);
+        console.log(`Retrieved from localStorage: ${key} =`, value);  // Debugging log
+        return value;
       } catch (e) {
         console.warn("Could not access localStorage", e);
         return null;
@@ -149,6 +152,7 @@
 
       // Get the selected answer
       const selectedAnswer = document.querySelector('input[name="cq1"]:checked').value;
+      console.log("Selected Answer for cq1:", selectedAnswer);  // Debugging log
 
       // Save the answer under the key 'cq1'
       userAnswers['cq1'] = selectedAnswer;
@@ -157,9 +161,11 @@
       // Save remaining time
       safeLocalStorageSetItem('quizTimeLeft', timeLeft);
 
-      // Navigate to the next question or results page if last question
+      // Navigate to the next question
+      console.log("Navigating to controls_question2.html");  // Debugging log
       window.location.href = 'controls_question2.html';
     });
   </script>
 </body>
 </html>
+
