index.js created

--- a/public/index.html
+++ b/public/index.html
@@ -4,58 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drive Mzansi</title>
-    <link rel="stylesheet" href="public/css/styles.css"> <!-- Your CSS file -->
-    <script src="js/signup.js" defer></script> <!-- Your JS file -->
-    <style>
-        /* Inline styles for centering and menu layout */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-
-        header {
-            background-color: #f8f8f8; /* Optional: Add background color */
-            padding: 20px;
-        }
-
-        nav {
-            background-color: #333; /* Menu bar background color */
-            overflow: hidden; /* Clear floats */
-        }
-
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            display: flex; /* Flexbox for horizontal layout */
-            justify-content: center; /* Center the menu items */
-        }
-
-        nav li {
-            padding: 14px 20px; /* Spacing for menu items */
-        }
-
-        nav a {
-            color: white; /* Menu item text color */
-            text-decoration: none; /* Remove underline */
-        }
-
-        nav a:hover {
-            background-color: #ddd; /* Hover effect */
-            color: black; /* Hover text color */
-        }
-
-        main {
-            padding: 20px; /* Optional: Add padding to main content */
-        }
-
-        footer {
-            background-color: #f8f8f8; /* Optional: Add footer background color */
-            padding: 10px; /* Footer padding */
-        }
-    </style>
+    <script src="https://unpkg.com/react/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 </head>
 <body>
     <header>
