replace const with import

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
     <div id="root"></div>
 
     <!-- Link to index.js, adjusted for the folder structure -->
-    <script src="src/index.js" type="text/babel"></script>
+    <script src="dist/index.js"></script>
 </body>
 </html>
