created new files

--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drive Mzansi</title>
-    <!-- React and Babel CDNs -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.2/umd/react.production.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/17.0.2/umd/react-dom.production.min.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="public/dist/index.js"></script> <!-- Link to the built JS file -->
 </head>
 <body>
     <div id="root"></div>
-
-    <!-- Link to index.js, adjusted for the folder structure -->
-    <script src="dist/index.js"></script>
 </body>
 </html>
