--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Drive Mzansi</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.2/umd/react.production.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/17.0.2/umd/react-dom.production.min.js"></script>
-    <script src="public/dist/index.js"></script> <!-- Link to the built JS file -->
+    <script src="dist/index.js"></script>
 </head>
 <body>
     <div id="root"></div>
