--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drive Mzansi</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.2/umd/react.production.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/17.0.2/umd/react-dom.production.min.js"></script>
-    <script src="dist/index.js"></script>
+    <title>Drive Mzansi - React App</title>
+    <link rel="stylesheet" href="css/styles.css"> <!-- Link to your CSS file if needed -->
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root"></div> <!-- This is where your React app will be rendered -->
+    <script src="dist/index.js"></script> <!-- Webpack will bundle your React code here -->
 </body>
 </html>
