--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,26 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drive Mzansi - React App</title>
-    <link rel="stylesheet" href="css/styles.css"> <!-- Link to your CSS file if needed -->
+    <title>Drive Mzansi - K53 App</title>
+    <!-- Link to CSS styles -->
+    <link rel="stylesheet" href="css/style.css"> <!-- Adjusted path for your actual CSS file -->
 </head>
 <body>
-    <div id="root"></div> <!-- This is where your React app will be rendered -->
-    <script src="dist/index.js"></script> <!-- Webpack will bundle your React code here -->
+    <!-- Main content for the app -->
+    <div id="content">
+        <h1>Welcome to Drive Mzansi</h1>
+        <p>Get started with your K53 practice test.</p>
+        <a href="home.html">Start Test</a> <!-- Link to the home page for the test -->
+        <a href="sign-up.html">Sign Up</a> <!-- Link to the sign-up page -->
+        <a href="login.html">Login</a> <!-- Link to the login page -->
+    </div>
+
+    <!-- Link to JavaScript files -->
+    <script src="js/timer.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/quiz.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
