--- a/public/profile.html
+++ b/public/profile.html
@@ -88,6 +88,7 @@
     <div id="results-container">
       <!-- Test results will be dynamically loaded here -->
     </div>
+
     <p>When you are confident that you are fully prepared for the exam, you can book online 
       for your K53 Learner’s Test date on the official <a href="https://online.natis.gov.za/#/" target="_blank">NATIS</a> website. </p>
   </main>
@@ -98,7 +99,7 @@
   <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js"></script> <!-- Include Firestore if needed -->
-  <script src="public/profile.js"></script> <!-- Link to your JS file -->
+  <script src="public/js/profile.js"></script> <!-- Correct path to your JS file -->
 
   <!-- Script to load test results -->
   <script>
