--- a/public/rules_question2.html
+++ b/public/rules_question2.html
@@ -167,7 +167,7 @@
     const timerInterval = setInterval(updateTimer, 1000);
 
     // Form submission event to save answer and navigate to the next question
-    document.getElementById('rules-q2').addEventListener('submit', function(e) {  // Update form ID
+    document.getElementById('rules-q2').addEventListener('submit', function(e) {  
       e.preventDefault();
       clearInterval(timerInterval); // Stop timer on form submission
       
@@ -175,23 +175,25 @@
       const userAnswers = JSON.parse(safeLocalStorageGetItem('userAnswers')) || {};
 
       // Get the selected answer
-      const selectedAnswer = document.querySelector('input[name="rq2"]:checked').value;  // Update question selector
+      const selectedAnswer = document.querySelector('input[name="rq2"]:checked').value;  
 
-      // Save the answer under the key 'control_q2' for this specific question
+      // Save the answer under the key 'rules_q2' for this specific question
       userAnswers['rules_q2'] = selectedAnswer;
       safeLocalStorageSetItem('userAnswers', JSON.stringify(userAnswers));
 
       // Save remaining time
       safeLocalStorageSetItem('quizTimeLeft', timeLeft);
 
-      // Check if this is the last question and navigate appropriately
-      const isLastQuestion = false; // Set to true if this is the last question
+      // Dynamically check if this is the last question and navigate accordingly
+      const currentPage = window.location.pathname.split('/').pop();
+      const isLastQuestion = currentPage === 'rules_question3.html'; // Check if this is the last question
+      
       if (isLastQuestion) {
-        window.location.href = 'results.html';
+        window.location.href = 'results.html';  // Go to results if last question
       } else {
-        window.location.href = 'rules_question3.html'; // Update to the next question page
+        window.location.href = 'rules_question3.html';  // Move to next question
       }
     });
-</script>
+  </script>
 </body>
 </html>
