react root element added

--- a/public/controls_question1.html
+++ b/public/controls_question1.html
@@ -98,6 +98,9 @@
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
+  <!-- Add the React root element -->
+  <div id="root"></div>  <!-- React will render components here -->
+
   <script>
     // Safe localStorage functions for improved reliability
     function safeLocalStorageSetItem(key, value) {
