--- a/public/profile.html
+++ b/public/profile.html
@@ -95,6 +95,9 @@
 
   <footer>&copy; 2024 Drive Mzansi</footer>
 
+  <!-- Add the React root element -->
+  <div id="root"></div>  <!-- React will render components here -->
+
   <!-- Include Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js"></script>
