--- a/public/results.html
+++ b/public/results.html
@@ -104,6 +104,9 @@
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
+  <!-- Add the React root element -->
+  <div id="root"></div>  <!-- React will render components here -->
+
   <script>
     // Correct answers for the quiz (updated keys)
     const correctAnswers = {
