--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -150,6 +150,9 @@
         <p>&copy; 2024 Drive Mzansi</p>
     </footer>
 
+   <!-- Add the React root element -->
+   <div id="root"></div>  <!-- React will render components here -->
+
     <!-- Firebase SDK scripts -->
     <script type="module" src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js"></script>
