--- a/public/signs_question3.html
+++ b/public/signs_question3.html
@@ -125,6 +125,9 @@
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
+  <!-- Add the React root element -->
+  <div id="root"></div>  <!-- React will render components here -->
+
   <script>
     // Safe localStorage functions
     function safeLocalStorageSetItem(key, value) {
