--- a/public/signs_question2.html
+++ b/public/signs_question2.html
@@ -128,6 +128,9 @@
   <!-- Add the React root element -->
   <div id="root"></div>  <!-- React will render components here -->
 
+  <!-- Include the JavaScript file -->
+  <script src="js/signs_question2.js"></script>  <!-- This is the newly added script link -->
+
   <script>
     // Safe localStorage functions for improved reliability
     function safeLocalStorageSetItem(key, value) {
