--- a/public/controls_question1.html
+++ b/public/controls_question1.html
@@ -101,6 +101,9 @@
   <!-- Add the React root element -->
   <div id="root"></div>  <!-- React will render components here -->
 
+  <!-- Include the JavaScript file -->
+  <script src="js/controls_question1.js"></script>  <!-- This is the newly added script link -->
+
   <script>
     // Safe localStorage functions for improved reliability
     function safeLocalStorageSetItem(key, value) {
