--- a/public/signs_question3.html
+++ b/public/signs_question3.html
@@ -128,6 +128,9 @@
   <!-- Add the React root element -->
   <div id="root"></div>  <!-- React will render components here -->
 
+  <!-- Include the JavaScript file -->
+  <script src="js/signs_question3.js"></script>  <!-- This is the newly added script link -->
+
   <script>
     // Safe localStorage functions
     function safeLocalStorageSetItem(key, value) {
