--- a/public/index.html
+++ b/public/index.html
@@ -1,183 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home - Drive Mzansi</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <style>
-      body {
-          font-family: Arial, sans-serif;
-          margin: 0;
-          padding: 0;
-          text-align: center;
-      }
-      header {
-          background-color: #f8f8f8;
-          padding: 20px;
-      }
-      nav {
-          background-color: #333;
-          overflow: hidden;
-      }
-      nav ul {
-          list-style-type: none;
-          margin: 0;
-          padding: 0;
-          display: flex;
-          justify-content: center;
-      }
-      nav li {
-          padding: 14px 20px;
-      }
-      nav a {
-          color: white;
-          text-decoration: none;
-      }
-      nav a:hover {
-          background-color: #ddd;
-          color: black;
-      }
-      main {
-          padding: 20px;
-      }
-      footer {
-          background-color: #f8f8f8;
-          padding: 10px;
-      }
-      #start-test-btn, #logout-btn {
-          padding: 10px 20px;
-          font-size: 16px;
-          margin: 10px;
-      }
-      #logout-btn {
-          background-color: #f44336;
-          color: white;
-          border: none;
-          border-radius: 5px;
-          cursor: pointer;
-      }
-      #logout-btn:hover {
-          background-color: #d32f2f;
-      }
-      table {
-          width: 100%;
-          border-collapse: collapse;
-          margin-top: 20px; /* Added margin for spacing */
-      }
-      th, td {
-          border: 1px solid #000;
-          padding: 8px;
-          text-align: left;
-      }
-      th {
-          background-color: #f2f2f2;
-      }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - Drive Mzansi</title>
+    <link rel="stylesheet" href="public/css/styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            background-color: #f4f4f9;
+        }
+        header {
+            background-color: #f8f8f8;
+            padding: 20px;
+        }
+        nav {
+            background-color: #333;
+            overflow: hidden;
+        }
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+        }
+        nav li {
+            padding: 14px 20px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+        }
+        nav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+        main {
+            padding: 20px;
+            max-width: 500px;
+            margin: 0 auto;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            margin-bottom: 20px;
+            font-size: 24px;
+            font-weight: bold;
+        }
+        label {
+            margin-bottom: 8px;
+            font-weight: bold;
+        }
+        input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0 20px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 16px;
+        }
+        button {
+            padding: 10px 20px;
+            background-color: #333;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        button:hover {
+            background-color: #555;
+        }
+        footer {
+            background-color: #f8f8f8;
+            padding: 10px;
+            margin-top: 20px;
+        }
+        p {
+            font-size: 16px;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-      </ul>
-    </nav>
-    <img src="images/logo.png" alt="Drive Mzansi Logo" width="300" height="300">
-  </header>
-
-  <main>
-    <h1>Welcome!</h1>
-    <h4>Take the Test</h4>
-    <p>Note: This computerized test is just like the official K53 Learner’s Test for Light (Code 2) & Heavy Motor Vehicle (Code 3). 
-      Click the "Start Test" button to start the test and the “Next” button at the bottom of the page to navigate to the next set of questions.</p>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sign-up.html">Sign Up</a></li>
+            </ul>
+        </nav>
+        <img src="images/logo.png" alt="Drive Mzansi Logo" width="300" height="300">
+    </header>
     
-    <!-- Table added here -->
-    <table>
-        <thead>
-            <tr>
-                <th>Category</th>
-                <th>Number of Questions</th>
-                <th>Required Passing Score</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Vehicle Controls</td>
-                <td>3</td>
-                <td>2</td>
-            </tr>
-            <tr>
-                <td>Rules of the Road</td>
-                <td>3</td>
-                <td>2</td>
-            </tr>
-            <tr>
-                <td>Road Signs</td>
-                <td>3</td>
-                <td>2</td>
-            </tr>
-        </tbody>
-    </table>
+    <main>
+        <h1>Login</h1>
+        <form id="login-form" style="display: flex; flex-direction: column; align-items: center;">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" aria-label="Email address" required>
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" aria-label="Password" required>
+            <button type="submit">Login</button>
+        </form>
+        <p>Don't have an account? <a href="sign-up.html">Sign up here</a></p>
+    </main>
+    
+    <footer>
+        <p>&copy; 2024 Drive Mzansi</p>
+    </footer>
 
-    <p>K53 Learner’s test duration: 10 minutes</p>
+    <!-- Firebase SDK and Authentication Code -->
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+        import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
 
-    <button id="start-test-btn">Start Test</button>
-    <button id="logout-btn">Logout</button>
-  </main>
+        const firebaseConfig = {
+            apiKey: "AIzaSyCglZk-B-Phojvp31xGxxxACfyO4w6lges",
+            authDomain: "drive-mzansi-app.firebaseapp.com",
+            projectId: "drive-mzansi-app",
+            storageBucket: "drive-mzansi-app.appspot.com",
+            messagingSenderId: "1007195133421",
+            appId: "1:1007195133421:web:1b7ec3cd063a31c05543e4"
+        };
 
-  <footer>
-    <p>&copy; 2024 Drive Mzansi</p>
-  </footer>
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
 
-  <!-- Firebase SDK and User Authentication Code -->
-  <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js';
-    import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js';
-    import { getFirestore, doc, getDoc } from 'https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js';
+        document.getElementById('login-form').addEventListener('submit', function(e) {
+            e.preventDefault();
 
-    const firebaseConfig = {
-      apiKey: "AiZaSyCglZk-B-Phojvp31xGxxxACfyO4w6lges",
-      authDomain: "drive-mzansi-app.firebaseapp.com",
-      projectId: "drive-mzansi-app",
-      storageBucket: "drive-mzansi-app.appspot.com",
-      messagingSenderId: "1007195133421",
-      appId: "1:1007195133421:web:1b7ec3cd063a31c05543e4"
-    };
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-    const auth = getAuth(app);
+            signInWithEmailAndPassword(auth, email, password)
+                .then((userCredential) => {
+                    alert("Login successful!");
+                    window.location.href = "home.html";
+                })
+                .catch((error) => {
+                    const errorCode = error.code;
+                    let errorMessage = "Something went wrong, please try again.";
 
-    onAuthStateChanged(auth, async (user) => {
-      if (user) {
-        const docRef = doc(db, "users", user.uid);
-        const docSnap = await getDoc(docRef);
+                    // Specific error handling
+                    if (errorCode === 'auth/user-not-found') {
+                        errorMessage = "No user found with this email address.";
+                    } else if (errorCode === 'auth/wrong-password') {
+                        errorMessage = "Incorrect password. Please try again.";
+                    } else if (errorCode === 'auth/invalid-email') {
+                        errorMessage = "Invalid email address format.";
+                    }
 
-        if (docSnap.exists()) {
-            const userData = docSnap.data();
-            document.getElementById('user-name').textContent = `${userData.name} ${userData.surname}`;
-        } else {
-            console.error("No such document!");
-            document.getElementById('user-name').textContent = 'User';
-        }
-      }
-    });
-
-    document.addEventListener('DOMContentLoaded', function() {
-      document.getElementById('start-test-btn').addEventListener('click', function() {
-        window.location.href = 'controls_question1.html';
-      });
-
-      document.getElementById('logout-btn').addEventListener('click', async function() {
-        try {
-          await signOut(auth);
-          alert('You have been logged out.');
-          window.location.href = 'index.html';
-        } catch (error) {
-          console.error('Sign Out Error', error);
-        }
-      });
-    });
-  </script>
+                    alert(errorMessage);
+                });
+        });
+    </script>
 </body>
 </html>
+
