--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Drive Mzansi</title>
+    <title>Drive Mzansi</title>
     <link rel="stylesheet" href="public/css/styles.css">
     <style>
         body {
@@ -20,13 +20,14 @@
         nav {
             background-color: #333;
             overflow: hidden;
+            text-align: left;
+            padding: 0 20px;
         }
         nav ul {
             list-style-type: none;
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
         }
         nav li {
             padding: 14px 20px;
@@ -41,40 +42,17 @@
         }
         main {
             padding: 20px;
-            max-width: 500px;
+            text-align: center;
+        }
+        img {
+            width: 300px;
+            height: 300px;
             margin: 0 auto;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-        h1 {
-            margin-bottom: 20px;
-            font-size: 24px;
-            font-weight: bold;
-        }
-        label {
-            margin-bottom: 8px;
-            font-weight: bold;
-        }
-        input {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0 20px 0;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 16px;
-        }
-        button {
-            padding: 10px 20px;
-            background-color: #333;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        button:hover {
-            background-color: #555;
+        .slogan {
+            font-size: 18px;
+            color: #333;
+            margin-top: 10px;
         }
         footer {
             background-color: #f8f8f8;
@@ -92,72 +70,24 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sign-up.html">Sign Up</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="profile.html">Profile</a></li>
+                <li><a href="home.html">Start Test</a></li>
             </ul>
         </nav>
-        <img src="images/logo.png" alt="Drive Mzansi Logo" width="300" height="300">
+        <img src="images/logo.png" alt="Drive Mzansi Logo">
+        <div class="slogan">
+            <p>Master the K53 with Drive Mzansi - Your Journey to Passing the Test Starts Here!</p>
+        </div>
     </header>
     
     <main>
-        <h1>Login</h1>
-        <form id="login-form" style="display: flex; flex-direction: column; align-items: center;">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" aria-label="Email address" required>
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" aria-label="Password" required>
-            <button type="submit">Login</button>
-        </form>
-        <p>Don't have an account? <a href="sign-up.html">Sign up here</a></p>
+        <h1>Welcome to Drive Mzansi</h1>
+        <p>Start your journey towards mastering the K53 driving test. Get ready to test your knowledge and practice with interactive questions!</p>
     </main>
     
     <footer>
         <p>&copy; 2024 Drive Mzansi</p>
     </footer>
-
-    <!-- Firebase SDK and Authentication Code -->
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-        import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
-
-        const firebaseConfig = {
-            apiKey: "AIzaSyCglZk-B-Phojvp31xGxxxACfyO4w6lges",
-            authDomain: "drive-mzansi-app.firebaseapp.com",
-            projectId: "drive-mzansi-app",
-            storageBucket: "drive-mzansi-app.appspot.com",
-            messagingSenderId: "1007195133421",
-            appId: "1:1007195133421:web:1b7ec3cd063a31c05543e4"
-        };
-
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-
-        document.getElementById('login-form').addEventListener('submit', function(e) {
-            e.preventDefault();
-
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-
-            signInWithEmailAndPassword(auth, email, password)
-                .then((userCredential) => {
-                    alert("Login successful!");
-                    window.location.href = "home.html";
-                })
-                .catch((error) => {
-                    const errorCode = error.code;
-                    let errorMessage = "Something went wrong, please try again.";
-
-                    // Specific error handling
-                    if (errorCode === 'auth/user-not-found') {
-                        errorMessage = "No user found with this email address.";
-                    } else if (errorCode === 'auth/wrong-password') {
-                        errorMessage = "Incorrect password. Please try again.";
-                    } else if (errorCode === 'auth/invalid-email') {
-                        errorMessage = "Invalid email address format.";
-                    }
-
-                    alert(errorMessage);
-                });
-        });
-    </script>
 </body>
 </html>
-
