--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -161,13 +161,13 @@
 
         // Firebase configuration
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID",
-            measurementId: "YOUR_MEASUREMENT_ID"
+            apiKey: "AIzaSyCglZk-B-Phojvp31xGxxxACfyO4w6lges",
+            authDomain: "drive-mzansi-app.firebaseapp.com",
+            projectId: "drive-mzansi-app",
+            storageBucket: "drive-mzansi-app.appspot.com",
+            messagingSenderId: "1007195133421",
+            appId: "1:1007195133421:web:1b7ec3cd063a31c05543e4",
+            measurementId: "G-WGTMR2MFRY"
         };
 
         // Initialize Firebase
