--- a/public/profile.html
+++ b/public/profile.html
@@ -41,6 +41,18 @@
       color: black;
     }
 
+    nav .logout {
+      background-color: #f44336; /* Red color for logout */
+      color: white;
+      border-radius: 5px;
+      padding: 10px 20px;
+      text-decoration: none;
+    }
+
+    nav .logout:hover {
+      background-color: #d32f2f; /* Darker red for hover */
+    }
+
     main {
       padding: 20px;
     }
@@ -76,6 +88,8 @@
         <li><a href="login.html">Login</a></li>
         <li><a href="sign-up.html">Sign Up</a></li>
         <li><a href="home.html">Take the Test</a></li>
+        <!-- Logout button -->
+        <li><a href="#" class="logout" id="logout-btn">Logout</a></li>
       </ul>
     </nav>
     <img src="images/Greencarlogo2.png" alt="Drive Mzansi Logo" width="300" height="300">
@@ -116,7 +130,7 @@
             pastResults.forEach((result, index) => {
                 const resultItem = document.createElement('div');
                 resultItem.classList.add('result-item');
-                resultItem.innerHTML = `
+                resultItem.innerHTML = ` 
                     <p><strong>Test ${index + 1}</strong></p>
                     <p>Score: ${result.score} / 9</p>
                     <p>Percentage: ${result.percentage.toFixed(2)}%</p>
@@ -124,6 +138,15 @@
                 resultsContainer.appendChild(resultItem);
             });
         }
+
+        // Logout functionality
+        const logoutBtn = document.getElementById('logout-btn');
+        logoutBtn.addEventListener('click', function (event) {
+            event.preventDefault(); // Prevent default link behavior
+            localStorage.removeItem('userName');
+            localStorage.removeItem('userAnswers');
+            window.location.href = 'login.html'; // Redirect to login page after logout
+        });
     });
   </script>
 </body>
